--- a/src/main/resources/templates/admin/adminRequest.html
+++ b/src/main/resources/templates/admin/adminRequest.html
@@ -16,7 +16,6 @@
       
     </div>
   
-   
     <div class="function">
       <!-- 관리자 담당 업무 -->
       <div class="adminName">
@@ -30,8 +29,8 @@
       <div class="chatting">
         <button class="fa-solid fa-paper-plane" id="openPopup"></button>
       </div>
-    </div>
-    <header th:replace="~{admin/adminChatting}"></header>
+     </div>
+    <!-- <header th:replace="~{admin/adminChatting}"></header>  -->
 
   </section>
   <main>
